Icons barely visible in dark mode - Fixed

--- a/_sass/_theme-dark.scss
+++ b/_sass/_theme-dark.scss
@@ -79,4 +79,7 @@ $dark-900: #121212;
     border-color: white;
   }
 
+  .icon-preview{
+    svg{stroke: #fff;}
+  }
 }
